--- a/k8s-security/assets/productpage.yaml
+++ b/k8s-security/assets/productpage.yaml
@@ -5,6 +5,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: productpage
+  namespace: book-info
   labels:
     app: productpage
     service: productpage
@@ -19,6 +20,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: bookinfo-productpage
+  namespace: book-info
   labels:
     account: productpage
 ---
@@ -26,6 +28,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: productpage-v1
+  namespace: book-info
   labels:
     app: productpage
     version: v1
