--- a/k8s-security/assets/ratings.yaml
+++ b/k8s-security/assets/ratings.yaml
@@ -5,6 +5,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ratings
+  namespace: book-info
   labels:
     app: ratings
     service: ratings
@@ -19,6 +20,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: bookinfo-ratings
+  namespace: book-info
   labels:
     account: ratings
 ---
@@ -26,6 +28,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ratings-v1
+  namespace: book-info
   labels:
     app: ratings
     version: v1
