--- a/k8s-security/assets/reviews.yaml
+++ b/k8s-security/assets/reviews.yaml
@@ -5,6 +5,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: reviews
+  namespace: book-info
   labels:
     app: reviews
     service: reviews
@@ -19,6 +20,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: bookinfo-reviews
+  namespace: book-info
   labels:
     account: reviews
 ---
@@ -26,6 +28,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: reviews-v1
+  namespace: book-info
   labels:
     app: reviews
     version: v1
@@ -68,6 +71,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: reviews-v2
+  namespace: book-info
   labels:
     app: reviews
     version: v2
@@ -110,6 +114,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: reviews-v3
+  namespace: book-info
   labels:
     app: reviews
     version: v3
