--- a/k8s-security/assets/productpage.yaml
+++ b/k8s-security/assets/productpage.yaml
@@ -4,17 +4,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: productpage
-  namespace: book-info
   labels:
     app: productpage
     service: productpage
+  name: productpage
+  namespace: book-info
 spec:
-  ports:
-  - port: 9080
-    name: http
+  type: NodePort
   selector:
     app: productpage
+  ports:
+  - port: 9080
+    targetPort: 9080
+    nodePort: 30007
 ---
 apiVersion: v1
 kind: ServiceAccount
